Fixed rules file to ensure copyright file was properly installed. This fixed the lintian error of 'no-copyright-file' and all is well now. -jake

--- a/debian/rules
+++ b/debian/rules
@@ -53,6 +53,7 @@ binary-arch: build install
 	dh_installchangelogs 
 	dh_installexamples
 	dh_installman
+	dh_installdocs
 	dh_compress
 	dh_python
 	dh_fixperms
